<resources>
    <string name="app_name">IotDemo</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="add_device">添加设备</string>
    <string name="scan_dec">将机身/说明书二维码放入框内即可自动扫描</string>
    <string name="add_service">添加设备</string>
    <string name="device">设备</string>
    <string name="preview">预览</string>
    <string name="type_number">手动输入序列号</string>
    <string name="button_login">登录</string>
    <string name="hint_password">密码</string>
    <string name="hint_username">账号</string>

    <!--smartConfig begin-->
    <string name="esp_esptouch_title">配置网络</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="esp_esptouch">Esp Touch</string>
    <string name="esp_esptouch_version">SmartConfigDemo</string>
    <string name="esp_esptouch_current_ssid">当前的SSID: %1$s</string>
    <string name="esp_esptouch_configure_ssid">请选择Wifi</string>
    <string name="esp_esptouch_ssid_hint">请输入Wifi名称</string>
    <string name="esp_esptouch_pwd_hint">请输入密码</string>
    <string name="esp_esptouch_show_pwd">显示密码</string>
    <string name="esp_esptouch_isSsidHidden">隐藏SSID</string>
    <string name="esp_esptouch_delete_pwd">清空</string>
    <string name="esp_esptouch_cannot_find_ap_hing">无法找到路由器: %1$s</string>
    <string name="esp_esptouch_connection_hint">请先连上一个Wifi</string>
    <string name="esp_esptouch_configure_message">正在配往 %1$s</string>
    <string name="esp_esptouch_result_suc">配置成功</string>
    <string name="esp_esptouch_result_failed">配置失败</string>
    <string name="esp_esptouch_result_over">配置结束，因当前连接的WIFI与配置的WIFI不同，无法收到反馈，请自行检查结果。</string>
    <string name="esp_esptouch_result_cancel">取消配置</string>
    <string name="start_config">开始配置</string>
    <!--smartConfig end-->
    <string name="space_edit">空间管理</string>
    <string name="my_space">我的空间</string>
    <string name="default_space">我的空间</string>
    <string name="leaveHome">离家</string>
    <string name="add_space">新增空间</string>
    <string name="front">前门</string>
    <string name="goBack">返回</string>
    <string name="checkDetail">查看详情</string>
    <string name="mine">我的</string>
    <string name="space_manage">空间管理</string>
    <string name="device_manage">设备管理</string>
    <string name="room_namage">房间管理</string>
    <string name="warnning_setting">告警阈值设置</string>
    <string name="msg_setting">消息提醒设置</string>
    <string name="device_link">设备联动</string>
    <string name="setting_title_name">名称</string>
    <string name="setting_title_room_belong">所属房间</string>
    <string name="SN">序列号</string>
    <string name="device_set_time">添加时间</string>
    <string name="hardware_version">硬件版本</string>
    <string name="software_version">软件版本</string>

    <string name="delete">删除</string>

    <string name="getting_data">获取数据中</string>
    <string name="be_logging_in">登录中</string>
    <string name="plz_wait">请稍等</string>
    <!--%n$s n表示第一个参数 s->字符串 d->整数 f->浮点数-->
    <string name="tmp_s_value">%1$s℃</string>
    <string name="device_setting">设备设置</string>
    <string name="swipe_down_to_finish">下滑关闭</string>
    <string name="new_ip">新IP</string>
    <string name="confirm">确定</string>
    <string name="sn_on_device_body">设备机上的9位序列号</string>
    <string name="next_step">下一步</string>
    <string name="check_online_status">正在检测上线状态请稍等</string>
    <string name="online_already">上线成功</string>
    <string name="online_successed">上线成功</string>
    <string name="unknown_device">未知设备</string>
    <string name="bound_this_gate">将为您自动绑定到网关：</string>
    <string name="SC_again">网关无法连接网络，请重新进行SmartConfig</string>
    <string name="first_SC">网关第一次运行，请进行SmartConfig</string>
    <string name="will_bound_this_gate">将为您自动绑定至网关</string>
    <string name="bounding_gate">正绑定至网关：</string>
    <string name="bound_gate_successfully">成功绑定至网关：</string>
    <string name="choose_gate">选择网关</string>
    <string name="go_setting">前去设置</string>
    <string name="cancle">取消</string>
    <string name="new_name">新名称</string>
    <string name="plz_type_in_new_space_name">请输入空间的新名称</string>
    <string name="new_space_name">新空间名称</string>
    <string name="sure_to_delete">确认删除?</string>
    <string name="sure_to_delete_content">删除空间后，您将无法查看此空间的所有信息</string>
    <string name="delete_successfully">删除成功</string>
    <string name="new_area">新增安装位置：</string>
    <string name="plz_type_in_new_area_name">请输入房间的新名称</string>
    <string name="new_area_name">新安装位置名称</string>
    <string name="default_area">我的房间</string>
    <string name="device_still_work">删除房间后，设备仍能正常工作</string>
    <string name="add_successfully">新增成功!</string>
    <string name="failed_work">操作失败</string>
    <string name="edit_successfully">修改成功</string>
    <string name="choose_area">选择房间/位置</string>
    <string name="add_area">新增房间</string>
    <string name="plz_type_in_new_device_name">请输入新的设备名称</string>
    <string name="plz_bound_gate_before">当前空间内没有可以使用的网关，请先绑定网关</string>
    <string name="cant_online">无法上线</string>
    <string name="msg">消息</string>
    <string name="processed">已处理</string>
    <string name="threshold_set">阈值设置</string>
    <string name="abnormal_region">异常区</string>
    <string name="safe_line">安全线</string>
</resources>
