<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <!--<Space-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="64dp"-->
    <!--android:layout_margin="5dip"-->
    <!--/>-->
    <include
        layout="@layout/scanner_toolbar"
        android:id="@+id/include2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esp_esptouch_configure_ssid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <Spinner
        android:id="@+id/esptouch_configure_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <EditText
        android:id="@+id/esptouch_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/esptouch_configure_wifi"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwd_hint"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/esptouch_isSsidHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esp_esptouch_isSsidHidden"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/pwd_hint"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/esptouch_pwd" />


    <CheckBox
        android:id="@+id/esptouch_show_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/esp_esptouch_show_pwd"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/esptouch_delete_pwd"
        app:layout_constraintBaseline_toBaselineOf="@+id/esptouch_isSsidHidden" />

    <Button
        android:id="@+id/esptouch_delete_pwd"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:padding="6dp"
        android:text="@string/esp_esptouch_delete_pwd"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/esptouch_pwd"
        app:layout_constraintBaseline_toBaselineOf="@+id/esptouch_pwd" />


    <Button
        android:id="@+id/esptouch_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_config"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/esptouch_show_pwd"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/pwd_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esp_esptouch_pwd_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</android.support.constraint.ConstraintLayout>